# random-planet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  constitution.md  index.html  rules.md  tech-stack.md
.claude/skills/planet-pr-merge/: SKILL.md
.claude/skills/planet-pr-validate/: SKILL.md
.claude/skills/planet-spec/: SKILL.md
.claude/skills/planet-spec-review/: SKILL.md
.claude/skills/planet-tdd/: SKILL.md
docs/: roadmap.md
docs/specs/: 000-architecture.md  001-cube-render.md  002-domain-data-model.md  003-cube-mesh-wiring.md  004-icosahedron-subdivision.md  005-subdivision-facade.md  006-by-concern-file-layout.md  007-radial-randomness.md  008-strategies-module.md  009-irregular-subdivision.md  010-vertex-scramble.md  011-vertex-operator-composition.md  012-preset-color-gradient.md  013-planet-aggregate-root.md  014-ocean-quota.md  015-control-panel.md  016-length-relative-displacement-noise.md  017-geodesic-terrain-rework.md  018-restore-tangential-jitter.md  019-per-preset-subdivision-strategy.md  020-face-edge-vertex-mesh-model.md  020-subdivision-frame-pacing.md  021-shading-mode-toggle.md  022-subdivision-frame-pacing.md  023-nonblocking-subdivision-generation.md  024-progressive-terrain-reveal.md
planet-core/: Cargo.toml  RULES.md
planet-core/src/: color.rs  edge.rs  geometry.rs  icosahedron.rs  lib.rs  mesh.rs  planets.rs  presets.rs  processor.rs  steps.rs  subdivide.rs  subdivision.rs  subdivision_args.rs  subdivision_mode.rs  uniform_red_split.rs
planet-core/src/color/: color_gradient.rs  rgb.rs
planet-core/src/geometry/: edge.rs  face.rs  mesh.rs  primitives.rs  vec3.rs  vertex.rs
planet-core/src/geometry/primitives/: cube.rs  icosahedron.rs
planet-core/src/planets/: planet.rs  planet_builder.rs  postprocess_stage.rs
planet-core/src/presets/: preset.rs  preset_params.rs
planet-core/src/processor/: compose.rs  compose_mesh.rs  finalize_normals.rs  identity.rs  identity_mesh.rs  jitter.rs  mesh_processor.rs  normal_displacement.rs  ocean_quota.rs  radial_displacement.rs  terrain_noise.rs  vertex_operator.rs  vertex_scramble.rs  vertex_scramble_range.rs
planet-core/src/subdivision/: edge.rs  elevation_noise_range.rs  min_edge_length.rs  normal_noise_range.rs  radial_random_split.rs  seed.rs  split_point_variance.rs  strategies.rs  subdivide.rs  subdivision_args.rs  subdivision_mode.rs  uniform_red_split.rs
planet-core/src/subdivision/strategies/: radial_random_split.rs  red_green_split.rs  uniform_red_split.rs
planet-core/tests/: apply_ocean_quota.rs  apply_terrain_noise.rs  color_gradient.rs  elevation_noise_range.rs  finalize_normals.rs  icosahedron.rs  mesh.rs  min_edge_length.rs  normal_noise_range.rs  ocean_quota.rs  planet.rs  preset.rs  preset_params.rs  rgb.rs  seed.rs  split_point_variance.rs  steps.rs  subdivide.rs  subdivision_args.rs  terrain_noise.rs  vec3.rs  vertex_scramble.rs  vertex_scramble_range.rs
planet-core/tests/features/: apply_ocean_quota.feature  apply_terrain_noise.feature  color_gradient.feature  elevation_noise_range.feature  finalize_normals.feature  icosahedron.feature  mesh.feature  min_edge_length.feature  normal_noise_range.feature  ocean_quota.feature  planet.feature  preset.feature  preset_params.feature  rgb.feature  seed.feature  split_point_variance.feature  steps.feature  subdivide.feature  subdivision_args.feature  terrain_noise.feature  vec3.feature  vertex_scramble.feature  vertex_scramble_range.feature
planet-renderer/: Cargo.toml  RULES.md
planet-renderer/src/: app.rs  buffers.rs  camera.rs  controls.rs  gpu.rs  lib.rs  render.rs  scene.rs  shader.wgsl  subdivision_stepper.rs  uniforms.rs
planet-renderer/src/controls/: depth_slider.rs  preset_select.rs  seed_from_timestamp.rs
planet-renderer/src/gpu/: buffers.rs  render.rs  shader.wgsl
planet-renderer/src/scene/: growth_animation.rs
planet-renderer/src/worker/: protocol.rs
planet-renderer/tests/: buffers.rs  camera.rs  depth_slider.rs  growth_animation.rs  mesh_render_indices.rs  mesh_render_line_indices.rs  mesh_render_vertices.rs  pack_frame.rs  preset_select.rs  seed_from_timestamp.rs  subdivision_stepper.rs  uniforms.rs
planet-renderer/tests/features/: buffers.feature  camera.feature  depth_slider.feature  growth_animation.feature  mesh_render_indices.feature  mesh_render_line_indices.feature  mesh_render_vertices.feature  pack_frame.feature  preset_select.feature  seed_from_timestamp.feature  subdivision_stepper.feature  uniforms.feature
