[package]
name = "planet-core"
version = "0.1.0"
edition.workspace = true

[[test]]
name = "vec3"
harness = false

[[test]]
name = "mesh"
harness = false

[[test]]
name = "icosahedron"
harness = false

[[test]]
name = "subdivide"
harness = false

[[test]]
name = "steps"
harness = false

[[test]]
name = "subdivision_args"
harness = false

[[test]]
name = "seed"
harness = false

[[test]]
name = "elevation_noise_range"
harness = false

[[test]]
name = "min_edge_length"
harness = false

[[test]]
name = "split_point_variance"
harness = false

[[test]]
name = "vertex_scramble_range"
harness = false

[[test]]
name = "vertex_scramble"
harness = false

[[test]]
name = "normal_noise_range"
harness = false

[[test]]
name = "rgb"
harness = false

[[test]]
name = "color_gradient"
harness = false

[[test]]
name = "preset_params"
harness = false

[[test]]
name = "preset"
harness = false

[dependencies]
rand = "0.10.2"
rand_distr = "0.6.0"
rand_pcg = "0.10.2"

[dev-dependencies]
cucumber.workspace = true
tokio.workspace = true
