[package]
name = "planet-core"
version = "0.1.0"
edition.workspace = true

[[test]]
name = "vec3"
harness = false

[[test]]
name = "mesh"
harness = false

[[test]]
name = "icosahedron"
harness = false

[[test]]
name = "subdivide"
harness = false

[[test]]
name = "steps"
harness = false

[[test]]
name = "subdivision_args"
harness = false

[[test]]
name = "seed"
harness = false

[[test]]
name = "vertex_scramble_range"
harness = false

[[test]]
name = "vertex_scramble"
harness = false

[[test]]
name = "rgb"
harness = false

[[test]]
name = "color_gradient"
harness = false

[[test]]
name = "preset_params"
harness = false

[[test]]
name = "preset"
harness = false

[[test]]
name = "planet"
harness = false

[[test]]
name = "ocean_quota"
harness = false

[[test]]
name = "apply_ocean_quota"
harness = false

[[test]]
name = "terrain_noise"
harness = false

[[test]]
name = "apply_terrain_noise"
harness = false

[[test]]
name = "finalize_normals"
harness = false

[dependencies]
noise = "0.9"
rand = "0.10.2"
rand_pcg = "0.10.2"

[dev-dependencies]
cucumber.workspace = true
tokio.workspace = true
