[package]
name = "planet-renderer"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "camera"
harness = false

[[test]]
name = "buffers"
harness = false

[[test]]
name = "uniforms"
harness = false

[dependencies]
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = ["console"] }
wgpu = "30.0.0"
winit = "0.30.13"

[dev-dependencies]
cucumber.workspace = true
tokio.workspace = true
