[package]
name = "planet-renderer"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "camera"
harness = false

[[test]]
name = "buffers"
harness = false

[[test]]
name = "uniforms"
harness = false

[[test]]
name = "mesh_render_vertices"
harness = false

[[test]]
name = "mesh_render_indices"
harness = false

[dependencies]
planet-core = { path = "../planet-core" }
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = ["console"] }
wgpu = "30.0.0"
winit = "0.30.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# planet-core's `rand`/`rand_pcg` pull in `getrandom`, which needs this feature
# to build for wasm32-unknown-unknown at all (native builds don't need it).
getrandom = { version = "0.4.3", features = ["wasm_js"] }

[dev-dependencies]
cucumber.workspace = true
tokio.workspace = true
